<resources>
    <string name="app_name">Project 3</string>
    <string name="create_account_button">create account button</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="UpToList">UpToList</string>
    <string name="email">Email\n</string>
    <string name="password">Password\n</string>
    <string name="register">Register</string>
    <string name="due_date_text">Due On %1$s</string>
    <string name="due_date_not_set">Due Date Not Set</string>
    <string name="set_time">Set Time %1$s</string>
    <string name="not_set_time">Time Not Set</string>
    <string name="change_password">Change Password</string>
    <string name="change_Password">Change Password</string>
    <string name="Change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>