<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="change_password">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/evCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/red"
        android:hint="@string/current_password"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/showCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/baseline_remove_red_eye_24"
        android:button="@color/white"
        app:layout_constraintStart_toStartOf="@+id/evCurrentPassword"
        app:layout_constraintTop_toTopOf="@id/evCurrentPassword" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/evNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/red"
        android:hint="@string/new_password"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintTop_toBottomOf="@id/evCurrentPassword" />

    <CheckBox
        android:id="@+id/showNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/baseline_remove_red_eye_24"
        android:button="@color/white"
        app:layout_constraintStart_toStartOf="@+id/evNewPassword"
        app:layout_constraintTop_toTopOf="@id/evNewPassword" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/evCheckPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/red"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintTop_toBottomOf="@id/evNewPassword" />

    <CheckBox
        android:id="@+id/showConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/baseline_remove_red_eye_24"
        android:button="@color/white"
        app:layout_constraintStart_toStartOf="@+id/evCheckPassword"
        app:layout_constraintTop_toTopOf="@id/evCheckPassword" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button_2"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evCheckPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>